--- a/app/src/main/res/layout/fragment_request_products.xml
+++ b/app/src/main/res/layout/fragment_request_products.xml
@@ -1,48 +1,188 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_height="match_parent"
     android:background="@color/lightgreen"
-    android:orientation="vertical"
-    android:layout_height="match_parent"
-    tools:context="com.aenatural.aenaturals.salesmans.fragments.RequestProducts">
+    android:gravity="center"
+    android:padding="@dimen/sd10"
+    android:layout_margin="@dimen/sd4"
+    tools:context="com.aenatural.aenaturals.salesmans.fragments.AddCustomers">
 
 
-    <TextView
+    <LinearLayout
+        android:id="@+id/linearLayout6"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Request Products"
-        android:background="@color/midgreen"
-        android:textColor="@color/darkgreen"
-        android:textStyle="bold"
-        android:padding="@dimen/sd10"
-        />
-<androidx.recyclerview.widget.RecyclerView
-    android:layout_width="match_parent"
-    android:layout_margin="@dimen/sd6"
-    android:layout_weight="1"
-    android:layout_height="match_parent"
-    android:id="@+id/recyclerViewRequestProducts"
-    />
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/customerFormSubmit"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:cardCornerRadius="@dimen/sd10">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="15dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="@dimen/sd20"
+                        android:text="Add new \nCustomer"
+                        android:textColor="@color/darkgreen"
+                        android:textSize="@dimen/sd20"
+                        android:textStyle="bold" />
+
+                    <ImageView
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:src="@drawable/ic_addform" />
+                </LinearLayout>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/sd10"
+                    android:layout_marginVertical="5dp"
+                    android:text="Customer Details"
+                    android:textColor="@color/darkgreen"
+                    android:textSize="@dimen/sd10" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="@dimen/sd10"
+                        android:layout_marginVertical="5dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/loginedittextbg"
+                        android:hint="First Name"
+                        android:padding="@dimen/sd10" />
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="@dimen/sd10"
+                        android:layout_marginVertical="5dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/loginedittextbg"
+                        android:hint="Last Name"
+                        android:padding="@dimen/sd10" />
+                </LinearLayout>
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/sd10"
+                    android:layout_marginVertical="5dp"
+                    android:background="@drawable/loginedittextbg"
+                    android:hint="Mobile Number"
+                    android:inputType="number"
+                    android:padding="@dimen/sd10" />
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/sd10"
+                    android:layout_marginVertical="5dp"
+                    android:background="@drawable/loginedittextbg"
+                    android:hint="Address"
+                    android:inputType="number"
+                    android:padding="@dimen/sd10" />
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/sd10"
+                    android:layout_marginVertical="5dp"
+                    android:background="@drawable/loginedittextbg"
+                    android:hint="Email - Id"
+                    android:inputType="number"
+                    android:padding="@dimen/sd10" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/sd10"
+                    android:layout_marginVertical="5dp"
+                    android:layout_marginTop="@dimen/sd10"
+                    android:text="Select Gender"
+                    android:textColor="@color/darkgreen"
+                    android:textSize="@dimen/sd10" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/sd6"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/genderMale"
+                        android:layout_width="70dp"
+                        android:layout_height="90dp"
+                        android:layout_marginHorizontal="@dimen/sd6"
+                        android:layout_weight="1"
+                        android:background="@drawable/loginedittextbg"
+                        android:src="@drawable/ic_userm" />
+
+                    <ImageView
+                        android:id="@+id/genderFemale"
+                        android:layout_width="70dp"
+                        android:layout_height="90dp"
+                        android:layout_marginHorizontal="@dimen/sd6"
+                        android:layout_weight="1"
+                        android:background="@drawable/loginedittextbg"
+                        android:src="@drawable/ic_userf" />
+                </LinearLayout>
+
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
+
+
     <androidx.cardview.widget.CardView
+        android:id="@+id/customerFormSubmit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/requestproductscheckout"
         android:backgroundTint="@color/midgreen"
-        android:layout_marginVertical="@dimen/sd8"
-        android:layout_marginHorizontal="@dimen/sd14"
-        app:cardCornerRadius="@dimen/sd12"
-        >
+        app:cardCornerRadius="@dimen/sd20"
+        android:layout_marginBottom="6dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent">
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Add to cart"
-            android:textSize="@dimen/sd14"
-            android:drawableEnd="@drawable/ic_baseline_add_shopping_cart_24"
-            android:textStyle="bold"
-            android:textColor="@color/darkgreen"
             android:gravity="center"
-            android:padding="@dimen/sd10"
-            />
+            android:padding="@dimen/sd14"
+
+            android:text="Submit"
+            android:textColor="@color/darkgreen"
+            android:textSize="@dimen/sd14"
+            android:textStyle="bold" />
     </androidx.cardview.widget.CardView>
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
