--- a/app/src/main/res/layout/salesman_more_header.xml
+++ b/app/src/main/res/layout/salesman_more_header.xml
@@ -7,6 +7,19 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
+        >
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/midgreen"
+            android:padding="@dimen/sd8"
+            android:text="More"
+            android:textColor="@color/darkgreen"
+            android:textStyle="bold" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginVertical="@dimen/sd16"
         android:orientation="horizontal"
         >
@@ -130,5 +143,6 @@
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
+    </LinearLayout>
     </LinearLayout>
 </HorizontalScrollView>
