--- a/app/src/main/res/layout/adapter_pending_payments.xml
+++ b/app/src/main/res/layout/adapter_pending_payments.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
+<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_margin="@dimen/sd4"
     android:orientation="horizontal"
@@ -31,6 +31,17 @@
             android:textColor="@color/darkgreen"
             android:text="Order Date"/>
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal"
+        >
+        <ImageView
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:src="@drawable/ic_rupeesmall"
+            app:tint="@color/darkgreen" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -40,4 +51,5 @@
         android:textStyle="bold"
         android:textSize="@dimen/sd18"
         />
+    </LinearLayout>
 </LinearLayout>
