--- a/app/src/main/res/layout/activity_customer_registration.xml
+++ b/app/src/main/res/layout/activity_customer_registration.xml
@@ -7,10 +7,101 @@
     android:background="@color/lightgreen"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="@dimen/sd10"
+
     tools:context="com.aenatural.aenaturals.salesmans.SaleDetailsActivity">
-<include
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingVertical="@dimen/sd6"
+        android:paddingHorizontal="@dimen/sd10"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:background="@color/midgreen">
+        <ImageView
+            android:layout_width="@dimen/sd20"
+            android:id="@+id/saleHistoryback"
+            android:layout_height="@dimen/sd20"
+            android:layout_marginHorizontal="@dimen/sd8"
+            android:src="@drawable/ic_baseline_arrow_back_ios_24"
+            android:layout_marginRight="@dimen/sd8"
+            />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Sales Data"
+        android:layout_weight="1"
+        android:fontFamily="@font/bangers"
+        android:textSize="@dimen/sd16"
+        android:textColor="@color/darkgreen"
+        android:textStyle="bold"
+        />
+    </LinearLayout>
+    <include
     layout="@layout/salesman_saleschart"
+    />
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:layout_margin="@dimen/sd6"
+android:visibility="gone"
+        app:cardCornerRadius="@dimen/sd18"
+        android:backgroundTint="@color/midgreen"
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="@dimen/sd10">
+            <com.github.mikephil.charting.charts.BarChart
+                android:id="@+id/chart1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+
+                android:layout_above="@+id/seekBar1"
+                />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Sales History"
+        android:layout_marginVertical="@dimen/sd6"
+        android:paddingVertical="@dimen/sd6"
+        android:paddingHorizontal="@dimen/sd10"
+        android:fontFamily="@font/bangers"
+        android:drawableEnd="@drawable/ic_baseline_filter_list_16"
+        android:textSize="@dimen/sd16"
+        android:background="@color/midgreen"
+        android:textColor="@color/darkgreen"
+        android:textStyle="bold"
+        />
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="@dimen/sd16"
+        android:layout_marginHorizontal="@dimen/sd8"
+        android:layout_marginTop="@dimen/sd10"
+        android:layout_marginBottom="@dimen/sd12"
+        android:backgroundTint="@color/lightgreen3"
+        >
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@null"
+            android:drawableEnd="@drawable/ic_searchglossy"
+            android:hint="search order"
+            android:paddingHorizontal="@dimen/sd6"
+            android:paddingVertical="@dimen/sd10" />
+    </androidx.cardview.widget.CardView>
+<androidx.recyclerview.widget.RecyclerView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_weight="0.2"
+    android:layout_margin="@dimen/sd2"
+    android:id="@+id/saleshistoryRecycler"
     />
 
 </LinearLayout>
