--- a/app/src/main/res/menu/customerbottommenu.xml
+++ b/app/src/main/res/menu/customerbottommenu.xml
@@ -7,10 +7,12 @@
     />
     <item
         android:title="privacy policy"
+        android:id="@+id/cust_privacybn"
         android:icon="@drawable/ic_baseline_info_24"
         />
     <item
         android:title="Logout"
+        android:id="@+id/cust_logout_bn"
         android:icon="@drawable/ic_logout_darkgreen"
         />
 
