--- a/app/src/main/res/layout/fragment_request_products.xml
+++ b/app/src/main/res/layout/fragment_request_products.xml
@@ -28,6 +28,10 @@
             android:layout_height="match_parent"
             app:cardCornerRadius="@dimen/sd10">
 
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -263,6 +267,7 @@
                 </LinearLayout>
 
             </LinearLayout>
+            </ScrollView>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
 
